--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             font-family: 'Jost', sans-serif;
             background-color: #111827;
         }
-        body.modal-open {
+        /* --- THIS IS THE SCROLLING FIX --- */
+        html.modal-open, body.modal-open {
             overflow: hidden;
         }
         ::-webkit-scrollbar { width: 8px; }
