--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background-color: #111827;
         }
         /* --- THIS IS THE SCROLLING FIX --- */
-        html.modal-open, body.modal-open {
+        body.modal-open {
             overflow: hidden;
         }
         ::-webkit-scrollbar { width: 8px; }
@@ -69,19 +69,18 @@
         <!-- JS will render content here -->
     </div>
 
-    <!-- Reader Modal -->
-    <div id="readerModal" class="fixed inset-0 z-[100] hidden flex-col bg-gray-900">
-        <!-- Reader Controls -->
-        <div id="reader-controls" class="w-full bg-gray-800 p-3 flex justify-between items-center border-b border-gray-700 gap-2 flex-shrink-0">
+    <!-- NEW READER MODAL STRUCTURE -->
+    <div id="readerModal" class="fixed inset-0 bg-black bg-opacity-90 z-[100] hidden flex flex-col">
+        <!-- 1. HEADER -->
+        <div id="reader-controls" class="w-full bg-gray-900 p-3 flex justify-between items-center border-b border-gray-700 gap-2 flex-shrink-0 z-10">
             <button id="closeReader" aria-label="Close reader" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg">Close</button>
             <div class="text-center overflow-hidden whitespace-nowrap text-ellipsis">
                 <h2 id="chapterTitle" class="text-lg font-semibold text-white"></h2>
-                <div id="pageIndicator" class="text-sm text-gray-300"></div>
             </div>
             <div class="flex items-center space-x-2 sm:space-x-4 flex-shrink-0">
                 <div class="flex items-center space-x-2">
                     <span class="text-sm font-medium text-gray-300">Webtoon</span>
-                    <div class="relative inline-block w-10 align-middle select-none transition duration-200 ease-in">
+                    <div class="relative inline-block w-10 align-middle select-none">
                         <input type="checkbox" name="toggle" id="webtoonToggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                         <label for="webtoonToggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-600 cursor-pointer"></label>
                     </div>
@@ -90,17 +89,18 @@
             </div>
         </div>
         
-        <!-- Reader Content Area -->
-        <div id="readerContainer" class="w-full flex-grow overflow-y-auto flex flex-col items-center py-4">
+        <!-- 2. SCROLLABLE CONTENT AREA -->
+        <div id="readerContainer" class="w-full flex-grow overflow-y-auto py-4">
             <div id="readerContent" class="flex flex-col items-center w-full">
-                <!-- Comic pages will be injected here -->
+                <!-- Pages will be injected here -->
             </div>
         </div>
 
-        <!-- Page Navigation -->
-         <div id="page-nav-buttons" class="w-full flex justify-center space-x-4 py-3 bg-gray-800 border-t border-gray-700 flex-shrink-0">
-            <button id="prevPage" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-6 rounded-lg">&larr; Prev</button>
-            <button id="nextPage" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-6 rounded-lg">Next &rarr;</button>
+        <!-- 3. FOOTER / PAGE NAVIGATION -->
+         <div id="page-nav-buttons" class="w-full flex justify-between items-center space-x-4 p-3 bg-gray-900 border-t border-gray-700 flex-shrink-0">
+            <button id="prevPage" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-6 rounded-lg w-1/3">&larr; Prev</button>
+            <div id="pageIndicator" class="text-sm text-gray-300 text-center w-1/3"></div>
+            <button id="nextPage" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-6 rounded-lg w-1/3">Next &rarr;</button>
         </div>
     </div>
 
