--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <!-- Reader Content (Isolated Scrolling) -->
         <div id="readerContainer" class="flex-grow w-full h-full overflow-y-auto">
-            <div id="readerContent" class="py-4">
+            <div id="readerContent">
                 <!-- Comic pages will be injected here -->
             </div>
         </div>
